--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ejs": "^3.1.2",
     "emoji-flags": "^1.2.0",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "morgan": "^1.10.0",
+    "node-fetch-npm": "^2.0.4",
     "request": "^2.88.2",
     "unirest": "^0.6.0"
   },
